modifica inial.html

--- a/Inicial.html
+++ b/Inicial.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ficha de Personagem</title>
 </head>
 <body>
- Olá    
+  <div class="ficha-header">
+    <img scr="https://www.hdwallpapersfreedownload.com/uploads/large/cartoons/disney-cinderella-princess.jpg" alt= "Cinderela" class="personagem-foto">
+            <h1 class="personagem-nome">Cinderela</h1>
+            <h2 class="personagem-titulo">Princesa da Disney</h2>
+        </header>
+
+        <section class="ficha-bio">
+            <p>Cinderela é uma jovem de caráter nobre e espírito resiliente, que, após a perda de seus pais, passa a viver sob os cuidados de sua madrasta e de suas irmãs postiças. Submetida a maus-tratos e reduzida a uma vida de servidão dentro de sua própria casa, mantém, entretanto, a esperança e a bondade inabaláveis. Com a intervenção de sua fada madrinha, participa de um grandioso baile real, onde desperta a atenção e o afeto do príncipe. Ao deixar o palácio de forma apressada, perde um delicado sapatinho de cristal, peça que posteriormente se torna o símbolo de sua verdadeira identidade e o instrumento de sua transformação, conduzindo-a a uma vida de dignidade, reconhecimento e amor.</p>
+        </section>
+
+        <section class="ficha-habilidades">
+            <h3>Principais qualidades</h3>
+            <ul>
+                <li>Bondade – mantém um coração generoso mesmo diante das adversidades.</li>
+                <li>Resiliência – suporta as dificuldades sem perder a esperança.</li>
+                <li>Paciência – tolera os maus-tratos com serenidade.</li>
+                <li>Doçura – trata a todos com delicadeza e ternura.</li>
+
+            </ul>
+        </section>
+
+  </div>
+"
 </body>
 </html>
