adiciona inicial.css

--- a/Inicial.html
+++ b/Inicial.html
@@ -23,11 +23,13 @@
                 <li>Resiliência – suporta as dificuldades sem perder a esperança.</li>
                 <li>Paciência – tolera os maus-tratos com serenidade.</li>
                 <li>Doçura – trata a todos com delicadeza e ternura.</li>
+                <link rel="stylesheet" href="Inicial.css">
+
 
             </ul>
         </section>
 
   </div>
-  
+
 </body>
 </html>
