--- a/Inicial.html
+++ b/Inicial.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha de Personagem</title>
+    <link rel="stylesheet" href="Inicial.css">
 </head>
 <body>
-  <div class="ficha-header">
-    <img scr="https://www.hdwallpapersfreedownload.com/uploads/large/cartoons/disney-cinderella-princess.jpg" alt= "Cinderela" class="personagem-foto">
+
+    <div class="ficha-container">
+        
+  <header class="ficha-header">
+    <img src="https://assets-persist.lovart.ai/agent_images/175e95cf-44a7-4663-ba17-8dee4c3b7c2b.jpg" alt="Cinderela" class="personagem-foto"> 
             <h1 class="personagem-nome">Cinderela</h1>
+            <hr style="border: none; height: 1px; background-color: black; margin: 20px 0;">
             <h2 class="personagem-titulo">Princesa da Disney</h2>
         </header>
 
@@ -16,15 +21,14 @@
             <p>Cinderela é uma jovem de caráter nobre e espírito resiliente, que, após a perda de seus pais, passa a viver sob os cuidados de sua madrasta e de suas irmãs postiças. Submetida a maus-tratos e reduzida a uma vida de servidão dentro de sua própria casa, mantém, entretanto, a esperança e a bondade inabaláveis. Com a intervenção de sua fada madrinha, participa de um grandioso baile real, onde desperta a atenção e o afeto do príncipe. Ao deixar o palácio de forma apressada, perde um delicado sapatinho de cristal, peça que posteriormente se torna o símbolo de sua verdadeira identidade e o instrumento de sua transformação, conduzindo-a a uma vida de dignidade, reconhecimento e amor.</p>
         </section>
 
-        <section class="ficha-habilidades">
-            <h3>Principais qualidades</h3>
+        <section class="ficha de qualidades">
+            <h3>Principais Qualidades</h3>
             <ul>
                 <li>Bondade – mantém um coração generoso mesmo diante das adversidades.</li>
                 <li>Resiliência – suporta as dificuldades sem perder a esperança.</li>
                 <li>Paciência – tolera os maus-tratos com serenidade.</li>
                 <li>Doçura – trata a todos com delicadeza e ternura.</li>
-                <link rel="stylesheet" href="Inicial.css">
-
+                
 
             </ul>
         </section>
